--- a/Source/Journals.Model/Journals.Model.csproj
+++ b/Source/Journals.Model/Journals.Model.csproj
@@ -42,7 +42,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountModels.cs" />
+    <Compile Include="IssueViewModel.cs" />
     <Compile Include="Journal.cs" />
+    <Compile Include="Issue.cs" />
     <Compile Include="JournalViewModel.cs" />
     <Compile Include="OperationStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
